<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5f5f7"
    android:orientation="vertical">

    <com.dashang.education.ui.widget.CircleImageView
        android:id="@+id/portrait"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="94dp"
        android:scaleType="centerCrop"
        android:src="@drawable/headportrait"/>

    <com.dashang.education.ui.widget.ClearEditText
        android:id="@+id/et_phone"
        style="@style/EditTextStyle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="73dp"
        android:drawableLeft="@drawable/ic_user"
        android:hint="@string/login_account_hint"
        android:inputType="phone"
        android:maxLength="11"
        />

    <com.dashang.education.ui.widget.PasswordEditText
        android:id="@+id/et_pwd"
        style="@style/EditTextStyle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/login_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="12"
        />

    <Button
        android:id="@+id/btn_login"
        style="@style/bigBtnStyle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="22dp">

        <TextView
            android:id="@+id/tv_forget_pwd"
            style="@style/generalTextViewStyle"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/forget_pwd"
            />

        <TextView
            android:id="@+id/login_by_code"
            style="@style/generalTextViewStyle"
            android:text="@string/login_by_verify_code"
            />
    </LinearLayout>
</LinearLayout>